# wasmig

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml
docs/: table_v3_README.md
examples/: CMakeLists.txt  table_v3_example.cpp
include/: codepos.h  stack_table.h
include/wasmig/: codepos.h  log.h  migration.h  registry.h  stack.h  stack_table.h  stack_tables.h  state.h  table.h  table_v3.h  utils.h
include/wasmig/internal/: debug.hpp
proto/: CMakeLists.txt  state.proto
proto/include/proto/: state.pb-c.c  state.pb-c.h
src/: checkpoint.cpp  codepos.cpp  debug.cpp  lib.rs  log.cpp  migration.c  migration.cpp  registry.cpp  restore.cpp  stack.cpp  stack_table.cpp  stack_tables.cpp  state.cpp  table.cpp  table_v3.cpp  table_v3_c_impl.c  utils.cpp
tests/: CMakeLists.txt  test_hello.cpp  test_memory.cpp  test_stack.cpp  test_stack_registry.cpp  test_stack_state_lifetime.cpp  test_table_v3.cpp
wcrn/: Cargo.toml
wcrn/include/: wcrn.h
wcrn/src/: capi.rs
wcrn/src/core/: stack_tables.rs
